# tdlpp

./: .gitignore  CMakeLists.txt  Readme.md
binding/: CMakeLists.txt
binding/src/: generator.cpp
cmake/: dependencies.cmake
cmake/find/: FindFilesystem.cmake
examples/: sample.cpp
include/plog/Formatters/: LogFormatter.h
include/tdlpp/: core.hpp  tdlpp.hpp  utils.hpp
include/tdlpp/auth/: DefaultAuth.hpp  IAuth.hpp  utils.hpp
include/tdlpp/base/: BindongHandler.hpp  Handler.hpp  ResponsePromise.hpp  UpdateCalbacksHandler.hpp
include/tdlpp/log/: IdNameBinding.hpp  LogFormatter.h  Logger.hpp
include/tdlpp/logger/: Logger.hpp
include/tdlpp/poll/: LongPoll.hpp  PollManager.hpp
include/tdlpp/router/: Router.hpp
samples/: CMakeLists.txt
samples/get-me/: get-me.cpp
samples/infinite/: infinite.cpp
samples/top-chats/: top-chats.cpp
src/: BindingHandler.cpp  DefaultAuth.cpp  Handler.cpp  Poll.cpp  Router.cpp  UpdateCalbacksHandler.cpp  sample.cpp
src/tdlpp/: core.hpp  tdlpp.hpp  utils.hpp
src/tdlpp/auth/: DefaultAuth.cpp  DefaultAuth.hpp  IAuth.hpp
src/tdlpp/base/: BindongHandler.hpp  Handler.hpp  ResponsePromise.hpp  UpdateCalbacksHandler.hpp
src/tdlpp/logger/: IdNameBinding.hpp  Logger.hpp
src/tdlpp/poll/: LongPoll.hpp  PollManager.hpp
src/tdlpp/router/: Router.h
tdlpp/: core.hpp  tdlpp.hpp
tdlpp/auth/: DefaultAuth.cpp  DefaultAuth.hpp  IAuth.hpp  utils.hpp
tdlpp/base/: Handler.cpp  Handler.hpp  ResponsePromise.hpp  UpdateCalbacksHandler.hpp
tdlpp/log/: LogFormatter.h  Logger.hpp
tdlpp/poll/: LongPoll.cpp  LongPoll.hpp  Poll.cpp
tdlpp/router/: Router.cpp  Router.hpp
